--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -63,7 +63,7 @@
    <widget class="QPushButton" name="pushIzberiDat_L">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>10</x>
       <y>30</y>
       <width>201</width>
       <height>23</height>
@@ -84,19 +84,6 @@
     </property>
     <property name="text">
      <string>Zajemi </string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>81</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Levi kanal</string>
     </property>
    </widget>
    <widget class="QPushButton" name="calibrationButton_L">
@@ -259,6 +246,10 @@
       <height>51</height>
      </rect>
     </property>
+    <property name="rowCount">
+     <number>1</number>
+    </property>
+    <row/>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
